# unredactor-mcp

./: .gitignore  CHATGPT_APP_STATUS.md  Dockerfile  LICENSE  PUBLISHING.md  Procfile  README.md  app-spec.md  logs.1766571440068.json  pyproject.toml  railway.toml  render.yaml  requirements-mcp.txt  smithery.yaml  start.sh  unredactor_mcp.py
chatgpt-app/: package-lock.json  package.json
chatgpt-app/src/: App.tsx  index.tsx
chatgpt-app/src/hooks/: useOpenAi.ts
chatgpt-app/src/types/: openai.d.ts
unredactor_mcp/: __init__.py  server.py
unredactor_mcp/static/: widget.css  widget.css.map  widget.html  widget.js
